putting bg svg on body causing issues on mobile, switched back to main

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -77,8 +77,7 @@ footer {
   line-height: 1.5em;
 }
 
-body {
-  margin-top: 30px;
+main {
   background-image: url(../assets/hero-pattern.svg);
   background-size: 500px;
   background-color: #f5f3f3;
